--- a/root/templates/index.html
+++ b/root/templates/index.html
@@ -8,11 +8,8 @@
 </head>
 
 <body>
-    <form action="{{url_for('upload')}}" method="post" enctype="multipart/form-data">
-        <label for="fileInput">Upload your Bank CSV Statement:</label></br>
-        <input type="file" id="fileInput" name="fileInput">
-        <button type="Submit">Submit</button>
-    </form>
+    <h1>Bank statement formatting helper!</h1>
+    <a href="{{url_for('category')}}"><button>Start formatting!</button></a>
 </body>   
 
 
