--- a/root/templates/index.html
+++ b/root/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Bank statement formatting helper!</h1>
+    <h1>Bank Statements Reformatter!</h1>
     <a href="{{url_for('category')}}"><button>Start formatting!</button></a>
 </body>   
 
