--- a/root/templates/file.html
+++ b/root/templates/file.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <form action="{{url_for('upload')}}" method="post" enctype="multipart/form-data">
+    <form action="{{url_for('upload', categories=categories)}}" method="post" enctype="multipart/form-data">
         <label for="fileInput">Upload your Bank CSV Statement:</label></br>
         <input type="file" id="fileInput" name="fileInput">
         <button type="Submit">Submit</button>
