bit of work on category processing
didnt work out, hit api requests limits
todo:
- get request processing sorted out
- get notes sorted out
- for requests: if misc, all of the misc categories will have to be verified by the user
- for notes: if there's a category, gpt will provide a very short note. if no cat, users will enter notes by themselves, can also choose not to

--- a/root/templates/category.html
+++ b/root/templates/category.html
@@ -21,9 +21,19 @@
         <input type="checkbox" name="categories" id="food" value="Food"><br>
         <label for="trans">Transport</label>
         <input type="checkbox" name="categories" id="trans" value="Transport"><br>
+        <label for="subs">Subscription</label>
+        <input type="checkbox" name="categories" id="subs" value="Subscription"><br>
+        <label for="health">Healthcare</label>
+        <input type="checkbox" name="categories" id="health" value="Healthcare"><br>
+        <label for="groc">Groceries</label>
+        <input type="checkbox" name="categories" id="groc" value="groceries"><br>
+        <label for="fashion">Fashion</label>
+        <input type="checkbox" name="categories" id="fashion" value="Fashion"><br>
+        
+        
+
         <label for="others-checkbox">Others</label>
         <input type="checkbox" id="others-checkbox"><br>
-
         <textarea id="others-text" name="categories" placeholder="Laundry, Self-care, Vacation."></textarea>
         
         
