--- a/dimeformatter/templates/file.html
+++ b/dimeformatter/templates/file.html
@@ -16,6 +16,14 @@
         <button type="Submit">Submit</button>
     </form>
 
+
+    {% if error %}
+    <p style="color: red; border: 1px solid red; padding: 10px; background-color: #ffe6e6;">
+        <strong>Error:</strong> {{ error }}
+    </p>
+    {% endif %}
+
+    
 </body>
 
 </html>
