--- a/dimeformatter/templates/file.html
+++ b/dimeformatter/templates/file.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
-
     <form action="{{url_for('upload')}}" method="post" enctype="multipart/form-data">
-        <input type="hidden" name="categories" value="{{ categories }}">
+        {% for category in categories %}
+            <input type="hidden" name="categories" value="{{ category }}">
+        {% endfor %}
         <label for="fileInput">Upload your Bank CSV Statement:</label></br>
         <input type="file" id="fileInput" name="fileInput">
         <button type="Submit">Submit</button>
